# Illiad_Mech_Interp

./: .gitignore  .nvim.lua  CLAUDE.md  Makefile  README.md  pyproject.toml
bib/: labels.bib  refs.bib
bib/CMUMT49P/: .metadata.txt
bib/H5ITJM7Z/: .metadata.txt
bib/adolfi2025/: .metadata.txt  adolfi2025_fulltext.md
bib/ameisen*/: .metadata.txt
bib/ameisen2025/: .metadata.txt  ameisen2025_fulltext.md
bib/anthropic2025b/: .metadata.txt  anthropic2025b_fulltext.md
bib/arditi2024/: .metadata.txt  arditi2024_fulltext.md
bib/arora2013/: .metadata.txt  arora2013_fulltext.md
bib/bricken2023/: .metadata.txt  bricken2023_fulltext.md
bib/bussmann2024/: .metadata.txt  bussmann2024_fulltext.md
bib/bussmann2025/: .metadata.txt  bussmann2025_fulltext.md
bib/callummcdougall2023/: .metadata.txt  callummcdougall2023_fulltext.md
bib/cammarata2020/: .metadata.txt  cammarata2020_fulltext.md
bib/candes2004/: .metadata.txt  candes2004_fulltext.md
bib/chan2022/: .metadata.txt  chan2022_fulltext.md
bib/chan2023/: .metadata.txt
bib/chanin2024/: .metadata.txt  chanin2024_fulltext.md
bib/chughtai2025/: .metadata.txt  chughtai2025_fulltext.md
bib/conmy2023/: .metadata.txt  conmy2023_fulltext.md
bib/donoho2006/: .metadata.txt  donoho2006_fulltext.md
bib/elhage2021/: .metadata.txt  elhage2021_fulltext.md
bib/elhage2022/: .metadata.txt  (+1 more)
lectures/: main.tex  overview_notes.md
lib/: metadata.tex  packages.tex  paperfig.tex  preamble.tex  settings.tex
scripts/: sync_from_template.sh
tests/: test_colab_compat.py  test_notebooks.py
tmp/: notes
(+189 files in other folders)
